apps/payments/fx.yaml
apiVersion: v1
kind: Service
metadata:
  name: fx-svc
  namespace: payments
spec:
  selector:
    app: fx-svc
  ports:
    - name: http
      port: 7073
      targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fx-svc
  namespace: payments
  labels:
    app: fx-svc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fx-svc
  template:
    metadata:
      labels:
        app: fx-svc
        version: v1
    spec:
      serviceAccountName: fx-svc
      containers:
        - name: fx-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9093
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
