apps/payments/payment-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway-svc
  namespace: payments
spec:
  selector:
    app: payment-gateway-svc
  ports:
    - name: http
      port: 7072
      targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-gateway-svc
  namespace: payments
  labels:
    app: payment-gateway-svc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-gateway-svc
  template:
    metadata:
      labels:
        app: payment-gateway-svc
        version: v1
    spec:
      serviceAccountName: payment-gateway-svc
      containers:
        - name: payment-gateway-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9092
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
