apps/payments/transfer.yaml
apiVersion: v1
kind: Service
metadata:
  name: transfer-svc
  namespace: payments
spec:
  selector:
    app: transfer-svc
  ports:
    - name: http
      port: 7071
      targetPort: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-svc
  namespace: payments
  labels:
    app: transfer-svc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transfer-svc
  template:
    metadata:
      labels:
        app: transfer-svc
        version: v1
    spec:
      serviceAccountName: transfer-svc
      containers:
        - name: transfer-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9091
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
